# xosc

./: CMakeLists.txt  README.txt  TODO.txt  xosc-design-brief.txt
include/: lo_extensions.h  oscin.h  xosc.h  xoscclient.h  xoschost.h  xosctag.h  xosctypes.h
src/: lo_extensions.cpp  oscin.cpp  xosc.cpp  xosc_main.cpp  xoscclient.cpp  xoschost.cpp  xosctag.cpp
supercollider/: testinterface.scd
test/: testosc.c
